WinTP version commit

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
     "reset-css": "^5.0.1",
+    "shortid": "^2.2.16",
     "vant": "^2.12.12",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
@@ -39,6 +40,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^6.0.0",
+    "less-loader": "^5.0.0",
     "lint-staged": "8.1.x",
     "postcss-px-to-viewport": "^1.1.1",
     "sass": "^1.30.0",
